[gd_scene load_steps=3 format=3 uid="uid://ld8cqmuarwb6"]

[ext_resource type="Script" uid="uid://dpwrq3jeq1003" path="res://addons/jumble/my_dock.gd" id="1_gsxib"]
[ext_resource type="PackedScene" uid="uid://cf7aseurr7jde" path="res://addons/jumble/range_select.tscn" id="2_24lum"]

[node name="MyDock" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gsxib")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 164.0
offset_bottom = 105.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Hue"

[node name="HueRangeSelect" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2_24lum")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Saturation"

[node name="SaturationRangeSelect" parent="VBoxContainer/HBoxContainer2" instance=ExtResource("2_24lum")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Value"

[node name="ValueRangeSelect" parent="VBoxContainer/HBoxContainer3" instance=ExtResource("2_24lum")]
unique_name_in_owner = true
layout_mode = 2

[node name="RandomizeSpriteColorButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Randomize Color"

[node name="SelectedColorPreview" type="ColorRect" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="SetColorButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Set Color"

[node name="ColorPicker" type="ColorPicker" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
edit_alpha = false
edit_intensity = false
color_mode = 1
picker_shape = 2
can_add_swatches = false
hex_visible = false
presets_visible = false

[node name="Range" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Range"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Value"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Range"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="MinValue" type="SpinBox" parent="VBoxContainer/Range/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MaxValue" type="SpinBox" parent="VBoxContainer/Range/HBoxContainer"]
layout_mode = 2
alignment = 1
